Initial commit for 1.20.1 migration