@@ -15,7 +15,6 @@ import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.commands.Commands;
 import net.minecraft.core.BlockPos;
-import net.minecraft.core.component.DataComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.item.ItemStack;
@@ -39,7 +38,7 @@ public class MinoCommand {
                             withPlayerAndGame(context, (game, player) -> {
                                 ActionReport report = ActionReport.builder(game, player);
                                 if (player.hand.isEmpty()) return;
-                                game.doDiscardCard(player, player.hand.getFirst(), report);
+                                game.doDiscardCard(player, player.hand.get(0), report);
                             });
                             return 1;
                         }))
